--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.525.0",
-    "reka-ui": "^2.3.2",
+    "reka-ui": "^2.4.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.5",
@@ -22,6 +22,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@iconify-json/material-symbols": "^1.2.30",
     "@vitejs/plugin-vue": "^6.0.0",
     "vite": "^7.0.0",
     "vite-plugin-vue-devtools": "^7.7.7"
